[tool.poetry]
name = "pyroll"
version = "2.1.0"
description = "Dice roller with all of the features you could want."
authors = ["Derek 'Vlek' McCammond <dmccammond25@gmail.com>"]
license = "gpl-3.0"
readme = "README.md"
homepage = "https://github.com/vlek/roll"
repository = "https://github.com/vlek/roll"
keywords = [
    "dice", "die", "roll", "rolling", "game",
    "gaming", "rp", "rpg", "parse", "parser", "parsing",
    "cli", "terminal"
]
packages = [
    { include = "roll" },
    { include = "roll/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.7"
typing_extensions = "^3.7.4"
toml = "^0.10.1"
pyparsing = "^2.4.7"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
pytest-cov = "^2.9.0"
coverage = "^5.3"
codecov = "^2.1.10"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
roll = 'roll.click.click_dice:roll_cli'
